2017-01-22	Tainting and range division.  (3)

		include/innocent-pear/orly.h :
		- rewrote and somewhat simplified tainting code
		- taint conditions now depend on `Boreal' template parameter

		include/innocent-pear/bbq.h :
		- somewhat optimized (compile-time) a case in do_op_rept(...)

		test/test-orly-2.cc :
		- upped scrambling levels for first orly<...> operation
		- enabled badness for g2(.)

		test/test-orly-3.cc ,
		test/test-orly-3.good :
		- new

		GNUmakefile :
		- added test-orly-3 test case

		share/innocent-pear/calm.cc ,
		share/innocent-pear/keyboard.cc :
		- removed string scrambling

2017-01-21	Tainting and range division.  (2)

		include/innocent-pear/orly.h :
		- orly<...>::operator()(x0, x1 ... x9) now tries to taint
		  yarly<...>()(x1 ... x9) with x0 even when Levels == 0
		- added "range division" that uses bit-wise test

		include/innocent-pear/unpossible.h ,
		- made unpossible<...> a `class' rather than a `struct' (to
		  stop clang++ warnings)
		- removed redundant definition of `WhichTyp'

		include/innocent-pear/omg.h :
		- made unpossible<...> a `class' rather than a `struct' (to
		  stop clang++ warnings)

		share/innocent-pear/sleepier.cc :
		- now actually checks return values of write(...) and
		  ftruncate(...)

2017-01-20	Tainting and range division.

		include/innocent-pear/bbq.h :
		- replaced new invertible operation with a cheaper one
		- tweaked pow(.) implementation

		include/innocent-pear/orly.h :
		- now uses range division in deciding whether to taint

		include/innocent-pear/host/srsly.h :
		- updated per bbq.h changes

		test/test-orly-1.cc :
		- reduced recursion levels for one of the subtests
		- now outputs results in either "0x"-prefixed hex (no
		  arguments) or decimal (1 argument)

		test/test-orly-2.cc :
		- now outputs results in either "0x"-prefixed hex (no
		  arguments) or decimal (1 argument)

		test/test-orly-1.good ,
		test/test-orly-2.good :
		- updated per .cc changes

2017-01-19	Tainting.
